syntax = "proto3";

package eigenlayer.hourglass.v1.peer;

option go_package = "github.com/Layr-Labs/hourglass-monorepo/ponos/gen/protos/eigenlayer/hourglass/v1/peer";

message PeerInfo {
  string network_address = 1;
  uint32 port = 2;
  string public_key = 3;
}
